# serial_bevy

./: .gitignore  Cargo.toml  README.md  README_CN.md
.github/workflows/: rust.yml
config/: app_memory.ron
src/: error.rs  lib.rs  main.rs
src/fonts/: mod.rs
src/port/: data.rs  mod.rs  ports.rs
src/screen/: mod.rs
src/serial/: ai.rs  data.rs  data_types.rs  discovery.rs  encoding.rs  io.rs  llm.rs  mod.rs  port.rs  port_data.rs  runtime.rs  selection.rs  state.rs
src/serial_ui/: config.rs  global_llm.rs  input.rs  layout.rs  markdown.rs  mod.rs  ui.rs
src/user_cmd/: cmd.rs
